--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -36,10 +36,15 @@ jobs:
         uses: actions/setup-node@v4
         with:
           node-version: "20"
-          cache: "npm"
+          cache: "pnpm"
+
+      - name: Setup pnpm
+        uses: pnpm/action-setup@v4
+        with:
+          version: 8
 
       - name: Install dependencies
-        run: npm ci
+        run: pnpm install --frozen-lockfile
 
       - name: Generate Prisma Client
         run: npx prisma generate
@@ -51,7 +56,7 @@ jobs:
           NODE_ENV: test
 
       - name: Run tests
-        run: npm test
+        run: pnpm test
         env:
           DATABASE_URL: postgresql://postgres:postgres@localhost:5432/test_db
           NODE_ENV: test
@@ -61,7 +66,7 @@ jobs:
           PORT: 3001
 
       - name: Build application
-        run: npm run build
+        run: pnpm run build
 
   deploy:
     needs: test
@@ -141,29 +146,35 @@ jobs:
             cd /var/www/klixinternet/kissu-tech-interview-back
             echo "📦 Installing dependencies..."
             
-            # Install dependencies with npm
-            echo "🔄 Installing dependencies with npm..."
+            # Install pnpm if not available
+            if ! command -v pnpm >/dev/null 2>&1; then
+              echo "🔄 Installing pnpm..."
+              npm install -g pnpm
+            fi
             
-            # Try npm install with timeout and retry logic
+            # Install dependencies with pnpm
+            echo "🔄 Installing dependencies with pnpm..."
+            
+            # Try pnpm install with timeout and retry logic
             max_attempts=3
             attempt=1
             
             while [ $attempt -le $max_attempts ]; do
               echo "🔄 Attempt $attempt of $max_attempts..."
               
-              if timeout 600 npm ci; then
-                echo "✅ npm ci completed successfully!"
+              if timeout 600 pnpm install --frozen-lockfile; then
+                echo "✅ pnpm install completed successfully!"
                 break
               else
                 echo "❌ Attempt $attempt failed with exit code $?"
                 
                 if [ $attempt -lt $max_attempts ]; then
-                  echo "🔄 Cleaning npm cache and retrying..."
-                  npm cache clean --force
+                  echo "🔄 Cleaning pnpm cache and retrying..."
+                  pnpm store prune
                   sleep 10
                 else
-                  echo "❌ All attempts failed, trying with npm install..."
-                  npm install
+                  echo "❌ All attempts failed, trying with pnpm install..."
+                  pnpm install
                 fi
               fi
               
@@ -226,7 +237,7 @@ jobs:
             fi
             
             # Build the application
-            npm run build
+            pnpm run build
             
             echo "✅ Build completed successfully!"
           EOF
